--- a/style.css
+++ b/style.css
@@ -2,7 +2,34 @@
 padding:0px;}
 
 body{
-    background-color: rgb(46, 45, 45);
+    background-color: rgb(25, 20, 24);
+}
+.title{
+    /* HOVERS */
+
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    top: 50pt;
+
+    font-family: 'Helvetica';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 116px;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+
+    background: linear-gradient(180deg, #FCFBF4 44.5%, #49483C 147.25%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .boxwrapper{
     display: flex;
@@ -19,7 +46,6 @@ body{
     height: 150pt;
     background-color: black;
     padding: 10pt;
-    box-shadow: 0px 0px 10px 10px rgb(0, 0, 0);
     align-items: baseline;
 }
 .box:hover{
