--- a/style.css
+++ b/style.css
@@ -6,11 +6,8 @@ body{
 }
 .title{
     /* HOVERS */
-
-    position: absolute;
-    width: 100%;
+    width: 500px;
     height: 100px;
-    top: 50pt;
 
     font-family: 'Helvetica';
     font-style: normal;
@@ -18,10 +15,6 @@ body{
     font-size: 96px;
     line-height: 116px;
     text-align: center;
-
-    display: flex;
-    justify-content: center;
-    flex-wrap: nowrap;
 
     background: linear-gradient(180deg, #FCFBF4 44.5%, #49483C 147.25%);
     -webkit-background-clip: text;
@@ -31,26 +24,42 @@ body{
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.boxwrapper{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    flex-wrap: nowrap;
+.container{
+    width: 100vw;
+    height: 100vh;
 
+    display: flex;
+    flex-direction: column;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    gap: 20pt;
+}
+.grid{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
+
+    width: 50vw;
+    height: 100vh;
+
+    gap: 1%;
 }
 .box{
-    margin: 20pt;
     border-radius: 20pt;
-    width: 150pt;
-    height: 150pt;
+    width: 6vw;
+    height: 6vw;
     background-color: black;
     padding: 10pt;
-    align-items: baseline;
+
 }
 .box:hover{
-    height: 180pt;
-    width: 180pt;
+    height: 7vw;
+    width: 7vw;
     transition: ease-in-out 0.1s;
 }
 .box:not(:hover){
