--- a/style_hovers.css
+++ b/style_hovers.css
@@ -1,8 +1,16 @@
+/*
+--text: #dbdff3;
+--background: #050810;
+--primary: #1a3587;
+--secondary: #772866;
+--accent: #c1486f;
+*/
+
 *{margin:0px;
 padding:0px;}
 
 body{
-    background-color: rgb(25, 20, 24);
+    background-color: #050810;
 }
 .title{
     /* HOVERS */
@@ -16,11 +24,7 @@ body{
     line-height: 116px;
     text-align: center;
 
-    background: linear-gradient(180deg, #FCFBF4 44.5%, #49483C 147.25%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-fill-color: transparent;
+    color: #dbdff3;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -53,7 +57,7 @@ body{
     border-radius: 20pt;
     width: 6vw;
     height: 6vw;
-    background-color: black;
+    background-color: #1a3587;
     padding: 10pt;
 
 }
