--- a/style_index.css
+++ b/style_index.css
@@ -12,3 +12,22 @@ padding:0px;}
 body{
     background-color: #050810;
 }
+.title{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wow{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30vh;
+
+    background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(41.75% 0.123 -0.05));
+    color: transparent;
+    background-clip: text;
+}
