--- a/style_index.css
+++ b/style_index.css
@@ -27,7 +27,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30vh;
 
-    background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(41.75% 0.123 -0.05));
+    background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(57.58% 0.158 0.01));
     color: transparent;
     background-clip: text;
+
+    text-shadow: rgba(26,53,135,0.9) 0px 0px 38px;
 }
