--- a/style_index.css
+++ b/style_index.css
@@ -7,29 +7,35 @@
 */
 
 *{margin:0px;
-padding:0px;}
-
-body{
-    background-color: #050810;
-}
-.title{
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.wow{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30vh;
-
-    background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(57.58% 0.158 0.01));
-    color: transparent;
-    background-clip: text;
-
-    text-shadow: rgba(26,53,135,0.9) 0px 0px 38px;
-}
+    padding:0px;}
+    
+    body{
+        background-color: #050810;
+    }
+    .title{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+    }
+    .wow{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30vh;
+    
+        background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(57.58% 0.158 0.01));
+        color: transparent;
+        background-clip: text;
+        filter: blur(30px);
+    
+    }
+    .wow2{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30vh;
+        
+    
+        background-image: linear-gradient(to right, oklab(36.42% -0.011 -0.14), oklab(57.58% 0.158 0.01));
+        color: transparent;
+        background-clip: text;
+        position: absolute;
+    }
