--- a/style_hovers.css
+++ b/style_hovers.css
@@ -1,16 +1,15 @@
-/*
---text: #dbdff3;
---background: #050810;
---primary: #1a3587;
---secondary: #772866;
---accent: #c1486f;
-*/
-
 *{margin:0px;
-padding:0px;}
-
+padding:0px;
+}
+:root {
+    --text: #dbdff3;
+    --background: #050810;
+    --primary: #1a3587;
+    --secondary: #772866;
+    --accent: #c1486f;
+}
 body{
-    background-color: #050810;
+    background-color: var(--background);
 }
 .title{
     /* HOVERS */
@@ -24,7 +23,7 @@ body{
     line-height: 116px;
     text-align: center;
 
-    color: #dbdff3;
+    color: var(--text);
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -57,15 +56,13 @@ body{
     border-radius: 20pt;
     width: 6vw;
     height: 6vw;
-    background-color: #1a3587;
+    background-color: var(--primary);
     padding: 10pt;
+    transition: all 0.3s;
 
 }
 .box:hover{
     height: 7vw;
     width: 7vw;
-    transition: ease-in-out 0.1s;
-}
-.box:not(:hover){
-    transition: ease-in-out 0.5s;
+    background-color: var(--secondary);
 }
