--- a/style_hovers.css
+++ b/style_hovers.css
@@ -9,49 +9,52 @@ Headings:
 
 */
 
-*{margin:0px;
-padding:0px;
+*{
+    margin:0px;
+    padding:0px;
 }
 :root {
-    --text: #dbdff3;
-    --background: #050810;
-    --primary: #1a3587;
-    --secondary: #772866;
-    --accent: #c1486f;
-    --heading: 3.5rem;
-    --sub-heading: 3rem;
-    --body-text: 1.8rem;
+    --text-color: #dbdff3;
+    --background-color: #050810;
+    --primary-color: #1a3587;
+    --secondary-color: #772866;
+    --accent-color: #c1486f;
+
+    --heading-size: 3rem;
+    --body-text-size: 1.8rem;
+
+    --heading-line-height: 3.3rem;
+    --body-text-line-height: 2.34rem;
+
+    --heading-letter-spacing: -0.03rem;
 }
 body{
-    background-color: var(--background);
-}
-.title{
-    /* HOVERS */
-    width: 500px;
-    height: 100px;
-
-    font-family: 'Helvetica';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 96px;
-    line-height: 116px;
-    text-align: center;
-
-    color: var(--text);
-
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: var(--background-color);
 }
 .container{
-    width: 100vw;
-    height: 100vh;
-
     display: flex;
-    flex-direction: column;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
+    flex-flow: column;
     align-items: center;
+    justify-content: center;
 
-    gap: 20pt;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+}
+.title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: var(--heading-size);
+    letter-spacing: var(--heading-letter-spacing);
+    text-align: center;
+
+    color: var(--text-color);
+
+    margin-top: var(--heading-line-height);
+    margin-bottom: var(--heading-line-height);
+
+    width: 100%;
+    height: var(--heading-size);
 }
 .grid{
     display: flex;
@@ -61,16 +64,16 @@ body{
     align-items: flex-start;
     align-content: flex-start;
 
+    gap: 1%;
+
     width: 50vw;
     height: 100vh;
-
-    gap: 1%;
 }
 .box{
     border-radius: 20pt;
     width: 6vw;
     height: 6vw;
-    background-color: var(--primary);
+    background-color: var(--primary-color);
     padding: 10pt;
     transition: all 0.3s;
 
@@ -78,5 +81,26 @@ body{
 .box:hover{
     height: 7vw;
     width: 7vw;
-    background-color: var(--secondary);
+    background-color: var(--secondary-color);
 }
+
+/* ===== Scrollbar CSS ===== */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary-color) var(--background-color);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--background-color);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+    border: 3px none var(--background-color);
+  }
